Fixed styling for dark mode

--- a/apps/tools/src/components/agenda/_styles.sass
+++ b/apps/tools/src/components/agenda/_styles.sass
@@ -5,3 +5,8 @@
   border: thin solid #999
   padding: .5rem
   box-shadow: .125rem .125rem .25rem #0005
+
+  @media (prefers-color-scheme: dark)
+    background: #333
+    color: #ddd
+    box-shadow: none
